--- a/DoorCoworkingOut/MainPage.xaml
+++ b/DoorCoworkingOut/MainPage.xaml
@@ -7,14 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" >
     <!--Loaded="Page_Loaded" Unloaded="Page_Unloaded"-->
-    
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" MinWidth="600">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"  />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
+        
         <RelativePanel Background="#FFFF8B00">
             <Button Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" 
                     Content="&#xE700;" FontSize="36" Background="Gray"
@@ -46,7 +46,7 @@
                    DisplayMode="CompactOverlay" 
                    OpenPaneLength="200" 
                    CompactPaneLength="56" 
-                   HorizontalAlignment="Left" Background="#FFFF8B00">
+                   HorizontalAlignment="Stretch" Background="#FFFF8B00" >
             <SplitView.Pane >
                 <ListBox SelectionMode="Single" 
                          Name="IconsListBox" 
@@ -72,7 +72,7 @@
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
-                <Frame Name="MyFrame" />
+                <Frame Name="MyFrame" Background="#FFF0F0F0" />
             </SplitView.Content>
         </SplitView>
 
